<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_padding_size_large"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <View
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:background="@color/light_grey" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/img_create_password_success"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_large"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:gravity="center_horizontal"
        android:fontFamily="@font/nunito_extra_bold"
        android:text="@string/agent_create_password_success"
        android:textSize="@dimen/material_text_title"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:gravity="center_horizontal"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/agent_create_password_success_desc"
        android:textColor="#B2A8D1"
        android:textSize="@dimen/material_text_subhead"/>

    <TextView
        android:id="@+id/tv_button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_xlarge"
        android:paddingStart="@dimen/padding_button_size_vertical"
        android:paddingEnd="@dimen/padding_button_size_vertical"
        android:paddingTop="@dimen/padding_button_size_horizontal"
        android:paddingBottom="@dimen/padding_button_size_horizontal"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:background="@drawable/draw_bottom_round" />
</LinearLayout>