<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/WidgetToolbar"
        android:id="@+id/toolbar">

        <ImageView
            style="@style/ToolbarIconBack"
            android:id="@+id/ib_back"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/ToolbarTitle"
            android:id="@+id/tv_toolbar_title"
            android:text="@string/home_toolbar_tittle"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/ToolbarPoint"
                android:text="@string/home_toolbar_point"
                tools:ignore="HardcodedText" />

            <ImageView
                android:layout_width="23dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_padding_size_small"
                android:src="@drawable/ic_coin"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/primary_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/rl_agent"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_icon_agent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/margin_padding_size_small"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/margin_padding_size_small"
                    app:cardElevation="@dimen/margin_padding_size_tiny">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_margin="@dimen/margin_padding_size_tiny"
                        android:src="@drawable/ic_agent"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/iv_arrow_agent"
                    android:layout_width="21dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_keyboard_arrow_right"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_header_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:layout_toStartOf="@+id/iv_arrow_agent"
                    android:layout_toEndOf="@id/cv_icon_agent"
                    android:fontFamily="@font/nunito_extra_bold"
                    android:text="@string/home_agent_header"
                    android:textColor="@color/text_home_menu_header"
                    android:textSize="@dimen/material_text_subhead" />

                <TextView
                    android:id="@+id/tv_desc_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_header_agent"
                    android:layout_toStartOf="@+id/iv_arrow_agent"
                    android:layout_toEndOf="@id/cv_icon_agent"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/home_agent_desc" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_mini_game"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_icon_mini_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/margin_padding_size_small"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/margin_padding_size_small"
                    app:cardElevation="@dimen/margin_padding_size_tiny">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_margin="@dimen/margin_padding_size_tiny"
                        android:src="@drawable/ic_mini_game"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/iv_arrow_mini_game"
                    android:layout_width="21dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_keyboard_arrow_right"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_header_mini_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:layout_toStartOf="@+id/iv_arrow_mini_game"
                    android:layout_toEndOf="@id/cv_icon_mini_game"
                    android:fontFamily="@font/nunito_extra_bold"
                    android:text="@string/home_mini_game_header"
                    android:textColor="@color/text_home_menu_header"
                    android:textSize="@dimen/material_text_subhead" />

                <TextView
                    android:id="@+id/tv_desc_mini_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_header_mini_game"
                    android:layout_toStartOf="@+id/iv_arrow_mini_game"
                    android:layout_toEndOf="@id/cv_icon_mini_game"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/home_mini_game_desc" />
            </RelativeLayout>

            <View
                style="@style/ViewSeparator"
                android:layout_margin="@dimen/margin_padding_size_large" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>